tests/should_fail/type_bool_lt_comparison.nv
module main

// SHOULD FAIL: comparison less-than on Bool (no __lt__ for Bool)
fn test() -> Bool {
    return true < false
}
println(test())
